--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -139,7 +139,7 @@ cplay_5 : "Yalnızca Kanallar Desteklenir."
 cplay_6 : "Kanalı bu gruba bağlamak için[{0}] kanalın **Sahibi** olmanız gerekir.\n**Kanal Sahibi:** @{1}\n\nAlternatif olarak grubunuzu o kanala bağlayabilirsiniz. ve ardından `/channelplay bağlantılı ile bağlanmayı deneyin`"
 
 #Play
-play_1 : "╔══════════════════ \n ❦𝗺𝘂̈𝘇𝗶𝗸 𝗶𝗻𝗱𝗶𝗿𝗶𝗹𝗶𝘆𝗼𝗿 \n║⏳𝗹𝘂̈𝘁𝗳𝗲𝗻 𝗯𝗲𝗸𝗹𝗲𝘆𝗶𝗻/n ╚═══════════════════"
+play_1 : "╔══════════════════ \n ❦ 𝗺𝘂̈𝘇𝗶𝗸 𝗶𝗻𝗱𝗶𝗿𝗶𝗹𝗶𝘆𝗼𝗿 \n║⏳𝗹𝘂̈𝘁𝗳𝗲𝗻 𝗯𝗲𝗸𝗹𝗲𝘆𝗶𝗻 /n ╚═══════════════════"
 play_2 : "𝗞𝗮𝗻𝗮𝗹 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗠𝗼𝗱𝘂\n   𝗦𝗼𝗿𝗴𝘂 𝗜‌𝘀‌𝗹𝗲𝗻𝗶𝘆𝗼𝗿... 𝗟𝘂‌𝘁𝗳𝗲𝗻 𝗕𝗲𝗸𝗹𝗲𝘆𝗶𝗻!\n\n 𝗕𝗮𝗴‌𝗹ı 𝗞𝗮𝗻𝗮𝗹: {𝟬}"
 play_3 :  "𝗦𝗼𝗿𝗴𝘂 𝗜‌𝘀‌𝗹𝗲𝗻𝗲𝗺𝗲𝗱𝗶! 𝗕𝗮𝘀‌𝗸𝗮 𝗕𝗶𝗿 𝗣𝗮𝗿𝗰‌𝗮 𝗢𝘆𝗻𝗮𝘁𝗺𝗮𝘆ı 𝗗𝗲𝗻𝗲𝘆𝗶𝗻𝗶𝘇. "
 play_4 : "🖇 𝗬𝗮𝗹𝗻ı𝘇𝗰𝗮 𝗬𝗼‌𝗻𝗲𝘁𝗶𝗰𝗶𝗹𝗲𝗿 𝗢𝘆𝗻𝗮𝘁ı𝗿 \n𝗬𝗮𝗹𝗻ı𝘇𝗰𝗮 𝗬𝗼‌𝗻𝗲𝘁𝗶𝗰𝗶𝗹𝗲𝗿 𝘃𝗲 𝗬𝗲𝘁𝗸𝗶𝗹𝗲𝗻𝗱𝗶𝗿𝗶𝗹𝗺𝗶𝘀‌ 𝗞𝘂𝗹𝗹𝗮𝗻ı𝗰ı𝗹𝗮𝗿 𝗯𝘂 𝗴𝗿𝘂𝗽𝘁𝗮 𝗺𝘂‌𝘇𝗶𝗸 𝗰‌𝗮𝗹𝗮𝗯𝗶𝗹𝗶𝗿.\n\n 𝗠𝗼𝗱𝘂 /𝗽𝗹𝗮𝘆𝗺𝗼𝗱𝗲 𝗮𝗿𝗮𝗰ı𝗹ı𝗴‌ı𝘆𝗹𝗮 𝗱𝗲𝗴‌𝗶𝘀‌𝘁𝗶𝗿𝗶𝗻 𝘃𝗲 𝘇𝗮𝘁𝗲𝗻 𝘆𝗼‌𝗻𝗲𝘁𝗶𝗰𝗶𝘆𝘀𝗲𝗻𝗶𝘇, /𝗮𝗱𝗺𝗶𝗻𝗰𝗮𝗰𝗵𝗲 𝗮𝗿𝗮𝗰ı𝗹ı𝗴‌ı𝘆𝗹𝗮 𝗮𝗱𝗺𝗶𝗻𝗰𝗮𝗰𝗵𝗲'𝗶 𝘆𝗲𝗻𝗶𝗱𝗲𝗻 𝘆𝘂‌𝗸𝗹𝗲𝘆𝗶𝗻"
@@ -223,7 +223,7 @@ song_11 : "**Yükleme Başladı\n\nYükleme hızı yavaş olabilir. Lütfen bekl
 queue_1 : "‣ 𝗟𝘂‌𝘁𝗳𝗲𝗻 𝗕𝗲𝗸𝗹𝗲𝘆𝗶𝗻.. 𝗦ı𝗿𝗮 𝗔𝗹ı𝗻ı𝘆𝗼𝗿... "
 queue_2 : "‣ 𝗦ı𝗿𝗮𝗱𝗮 𝗠𝗮𝗹𝗲𝘀𝗲𝗳 𝗛𝗶𝗰‌𝗯𝗶𝗿 𝗦‌𝗲𝘆 𝗬𝗼𝗸. "
 queue_3 : "‣<u>**𝗦ı𝗿𝗮𝗱𝗮𝗸𝗶 𝗣𝗮𝗿𝗰‌𝗮𝗹𝗮𝗿:</u>  [𝗦ı𝗿𝗮𝗱𝗮𝗸𝗶 𝗣𝗮𝗿𝗰‌𝗮𝗹𝗮𝗿𝗮 𝗕𝘂𝗿𝗱𝗮𝗻 𝗕𝗮𝗸𝗮𝗯𝗶𝗹𝗶𝗿𝘀𝗶𝗻𝗶𝘇]({𝟬})" 
-queue_4 : "╔══════════════════\n #{0} 𝗻𝘂𝗺𝗮𝗿𝗮𝗹ı 𝘀ı𝗿𝗮𝘆𝗮 𝗲𝗸𝗹𝗲𝗻𝗱𝗶 \n║ ‣𝗦̧𝗮𝗿𝗸ı 𝗮𝗱ı: {1}\n║ ‣𝘀𝘂̈𝗿𝗲: {2}\n║ ‣𝗧𝗮𝗹𝗲𝗽 𝗲𝗱𝗲𝗻: {3}\n╚═══════════════════"
+queue_4 : "╔══════════════════\n ║#{0} 𝗻𝘂𝗺𝗮𝗿𝗮𝗹ı 𝘀ı𝗿𝗮𝘆𝗮 𝗲𝗸𝗹𝗲𝗻𝗱𝗶 \n║ ‣𝗦̧𝗮𝗿𝗸ı 𝗮𝗱ı: {1}\n║ ‣𝘀𝘂̈𝗿𝗲: {2}\n║ ‣𝗧𝗮𝗹𝗲𝗽 𝗲𝗱𝗲𝗻: {3}\n╚═══════════════════"
 queue_5 : "𝗦ı𝗿𝗮𝗱𝗮 𝗦𝗮𝗱𝗲𝗰𝗲 𝗕𝗶𝗿 𝗣𝗮𝗿𝗰‌𝗮 𝗩𝗮𝗿, 𝗟𝘂‌𝘁𝗳𝗲𝗻 𝗕𝗶𝗿𝗮𝘇 𝗗𝗮𝗵𝗮 𝗣𝗮𝗿𝗰‌𝗮 𝗘𝗸𝗹𝗲𝘆𝗶𝗻. "
 
 # All Streaming Lines
