--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -255,7 +255,7 @@ S_B_4 : "📨 𝗞𝗮𝗻𝗮𝗹"
 S_B_5 : "✚ 𝗕𝗲𝗻𝗶 𝗚𝗿𝘂𝗯𝘂𝗻𝗮 𝗘𝗸𝗹𝗲"
 S_B_6 : "💡 𝗞𝗮𝘆𝗻𝗮𝗸 𝗞𝗼𝗱𝘂"
 S_B_7 : "👤 𝗜‌𝗹𝗲𝘁𝗶𝘀‌𝗶𝗺 𝗛𝗲𝘀𝗮𝗯ı"
-S_B_8 : " ╔══════════════════\n\n 📚𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿 𝗠𝗲𝗻𝘂‌𝘀𝘂‌ \n║ 𝗡𝗮𝘀ı𝗹 𝗸𝘂𝗹𝗹𝗮𝗻ı𝗹ı𝗿? \n╚═══════════════════" 
+S_B_8 : " 📚𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿 𝗠𝗲𝗻𝘂‌𝘀𝘂‌ 𝗡𝗮𝘀ı𝗹 𝗸𝘂𝗹𝗹𝗮𝗻ı𝗹ı𝗿?" 
              
 #Help 
 H_B_1 :  " 🛡️ 𝗔𝗱𝗺𝗶𝗻 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
