--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -36,7 +36,7 @@ auth_7 : "**Yetkili Kullanıcılar Listesi[AUL]:**\n\n"
 auth_8 : "┗ Tarafından eklendi:-"
 
 # PLUGINS - Admins
-admin_1 : "╰☞ ╔════▣\n 𝗺𝘂̈𝘇𝗶𝗸 𝘇𝗮𝘁𝗲𝗻 𝗱𝘂𝗿𝗮𝗸𝗹𝗮𝘁ı𝗹𝗱ı◎▣════╗ \n ╚════▣◎▣════╝"
+admin_1 : "╔════▣\n 𝗺𝘂̈𝘇𝗶𝗸 𝘇𝗮𝘁𝗲𝗻 𝗱𝘂𝗿𝗮𝗸𝗹𝗮𝘁ı𝗹𝗱ı◎▣════╗ \n ╚════▣◎▣════╝"
 admin_2 : "💫 𝘀𝗲𝘀𝗹𝗶 𝘀𝗼𝗵𝗯𝗲𝘁 𝗱𝘂𝗿𝗮𝗸𝗹𝗮𝘁ı𝗹𝗱ı {} "
 admin_3 : "🎧 𝗺𝘂̈𝘇𝗶𝗸 𝘇𝗮𝘁𝗲𝗻 𝘆𝗲𝗻𝗶𝗱𝗲𝗻 𝗯𝗮𝘀̧𝗹𝗮𝘁ı𝗹𝗱ı."
 admin_4 : "🎧 𝘀𝗲𝘀𝗹𝗶 𝘀𝗼𝗵𝗯𝗲𝘁𝗶 𝘀𝘂̈𝗿𝗱𝘂̈𝗿𝗲𝗻 {} "
