--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -223,7 +223,7 @@ song_11 : "**Yükleme Başladı\n\nYükleme hızı yavaş olabilir. Lütfen bekl
 queue_1 : "‣ 𝗟𝘂‌𝘁𝗳𝗲𝗻 𝗕𝗲𝗸𝗹𝗲𝘆𝗶𝗻.. 𝗦ı𝗿𝗮 𝗔𝗹ı𝗻ı𝘆𝗼𝗿... "
 queue_2 : "‣ 𝗦ı𝗿𝗮𝗱𝗮 𝗠𝗮𝗹𝗲𝘀𝗲𝗳 𝗛𝗶𝗰‌𝗯𝗶𝗿 𝗦‌𝗲𝘆 𝗬𝗼𝗸. "
 queue_3 : "‣<u>**𝗦ı𝗿𝗮𝗱𝗮𝗸𝗶 𝗣𝗮𝗿𝗰‌𝗮𝗹𝗮𝗿:</u>  [𝗦ı𝗿𝗮𝗱𝗮𝗸𝗶 𝗣𝗮𝗿𝗰‌𝗮𝗹𝗮𝗿𝗮 𝗕𝘂𝗿𝗱𝗮𝗻 𝗕𝗮𝗸𝗮𝗯𝗶𝗹𝗶𝗿𝘀𝗶𝗻𝗶𝘇]({𝟬})" 
-queue_4 : "╔══════════════════════\n║#{0} 𝗻𝘂𝗺𝗮𝗿𝗮𝗹ı 𝘀ı𝗿𝗮𝘆𝗮 𝗲𝗸𝗹𝗲𝗻𝗱𝗶 \n║●𝗦̧𝗮𝗿𝗸ı 𝗮𝗱ı:{1}\n║●𝘀𝘂̈𝗿𝗲: {2}\n║●𝗧𝗮𝗹𝗲𝗽 𝗲𝗱𝗲𝗻: {3}\n╚══════════════════════"
+queue_4 : "╔══════════════════════\n║#{0} 𝗻𝘂𝗺𝗮𝗿𝗮𝗹ı 𝘀ı𝗿𝗮𝘆𝗮 𝗲𝗸𝗹𝗲𝗻𝗱𝗶 \n║══════════════════════\n║●𝗦̧𝗮𝗿𝗸ı 𝗮𝗱ı:{1}\n║══════════════════════\n║●𝘀𝘂̈𝗿𝗲: {2}\n║══════════════════════\n║●𝗧𝗮𝗹𝗲𝗽 𝗲𝗱𝗲𝗻: {3}\n╚══════════════════════"
 queue_5 : "𝗦ı𝗿𝗮𝗱𝗮 𝗦𝗮𝗱𝗲𝗰𝗲 𝗕𝗶𝗿 𝗣𝗮𝗿𝗰‌𝗮 𝗩𝗮𝗿, 𝗟𝘂‌𝘁𝗳𝗲𝗻 𝗕𝗶𝗿𝗮𝘇 𝗗𝗮𝗵𝗮 𝗣𝗮𝗿𝗰‌𝗮 𝗘𝗸𝗹𝗲𝘆𝗶𝗻. "
 
 # All Streaming Lines
