--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -259,7 +259,7 @@ S_B_7 : "👤 𝗜‌𝗹𝗲𝘁𝗶𝘀‌𝗶𝗺 𝗛𝗲𝘀𝗮𝗯ı"
 S_B_8 : "📚𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿 𝗠𝗲𝗻𝘂‌𝘀𝘂‌ 𝗡𝗮𝘀ı𝗹 𝗸𝘂𝗹𝗹𝗮𝗻ı𝗹ı𝗿?" 
         
 #Help 
-H_B_1 :  " 🍂🍂🍂🍂🍂 𝗔𝗱𝗺𝗶𝗻 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı\n🍂🍂🍂🍂🍂"
+H_B_1 :  " 🍂🍂🍂🍂🍂 \n𝗔𝗱𝗺𝗶𝗻 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı\n🍂🍂🍂🍂🍂"
 H_B_2 :  " 🎧 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
 H_B_3 :  "🤖 𝗕𝗼𝘁 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
 H_B_4 : "🔶𝗘𝗸𝘀𝘁𝗿𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
