--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -262,9 +262,9 @@ H_B_2 :  " 🎧 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
 H_B_3 :  " 🎚️AKTİFSES"
 H_B_4 : "🔶PLAY"
 H_B_5 :  "REKLAM"
-H_B_6 : "🌙 TOP10"
-H_B_7 :  "PLAYLİSTESİ
-H_B_8 : "GBAN"
+H_B_6 : " TOP10"
+H_B_7 :  "PLAYLİSTESİ"
+H_B_8 : " GBAN"
 H_B_9:  "𝗦𝘂𝗱𝗼 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
 H_B_10: "KAPAT"
 #PlayMode
