--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -257,15 +257,15 @@ S_B_7 : "👤 𝗜‌𝗹𝗲𝘁𝗶𝘀‌𝗶𝗺 𝗛𝗲𝘀𝗮𝗯ı"
 S_B_8 : "📚𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿 𝗠𝗲𝗻𝘂‌𝘀𝘂‌ 𝗡𝗮𝘀ı𝗹 𝗸𝘂𝗹𝗹𝗮𝗻ı𝗹ı𝗿?" 
         
 #Help 
-H_B_1 :  " 💦𝗔𝗱𝗺𝗶𝗻 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
-H_B_2 :  " 🎧 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
-H_B_3 :  " 🎚️AKTİFSES"
-H_B_4 : "🔶PLAY"
-H_B_5 :  "REKLAM"
-H_B_6 : " TOP10"
-H_B_7 :  "PLAYLİSTESİ"
-H_B_8 : " GBAN"
-H_B_9:  "𝗦𝘂𝗱𝗼 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
+H_B_1 :  " 💦YETKİLİ 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
+H_B_2 :  " ⏭️DEĞİSTİME KOMUTU"
+H_B_3 :  "🥁𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
+H_B_4 : "MÜZİK İNDİRME KOMUTLARİ"
+H_B_5 :  "📭REKLAM"
+H_B_6 : " 📻OYNATMA LİSTESİ"
+H_B_7 :  "🚫ENGELEME LİSTESİ"
+H_B_8 : " 🤖BOT KOMUTLARI"
+H_B_9:  "🟡EKSTRA KOMUTLARI"
 H_B_10: "KAPAT"
 #PlayMode
 PM_B_1 : "𝗗𝗶𝗿𝗲𝗰𝘁𝗣𝗹𝗮𝘆"
