--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -264,8 +264,8 @@ H_B_4 : "MÜZİK İNDİRME KOMUTLARİ"
 H_B_5 :  "📭REKLAM"
 H_B_6 : " 📻OYNATMA LİSTESİ"
 H_B_7 :  "🚫ENGELEME LİSTESİ"
-H_B_8 : " 🤖BOT KOMUTLARI"
-H_B_9:  "🟡EKSTRA KOMUTLARI"
+H_B_8 : "🤖BOT KOMUTLARI"
+H_B_9:  "💥EKSTRA KOMUTLARI"
 H_B_10: "KAPAT"
 #PlayMode
 PM_B_1 : "𝗗𝗶𝗿𝗲𝗰𝘁𝗣𝗹𝗮𝘆"
