--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -254,7 +254,7 @@ S_B_4 : "📨 𝗞𝗮𝗻𝗮𝗹"
 S_B_5 : "✚ 𝗕𝗲𝗻𝗶 𝗚𝗿𝘂𝗯𝘂𝗻𝗮 𝗘𝗸𝗹𝗲"
 S_B_6 : "💡 𝗞𝗮𝘆𝗻𝗮𝗸 𝗞𝗼𝗱𝘂"
 S_B_7 : "👮SAHİP"
-S_B_8 : "📚𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿 𝗠𝗲𝗻𝘂‌𝘀𝘂‌ " 
+S_B_8 : "📚KOMUTLAR MENÜSÜ " 
         
 #Help 
 H_B_1 :  " 💦YETKİLİ 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
