--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -260,10 +260,10 @@ S_B_8 : "📚KOMUTLAR MENÜSÜ "
 H_B_1 :  " 💦YETKİLİ 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
 H_B_2 :  " ⏭️DEĞİSTİME KOMUTU"
 H_B_3 :  "🥁𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
-H_B_4 : "MÜZİK İNDİRME KOMUTLARİ"
-H_B_5 :  "📭REKLAM"
-H_B_6 : " 📻OYNATMA LİSTESİ"
-H_B_7 :  "🚫ENGELEME LİSTESİ"
+H_B_4 : "📻OYNATMA LİSTESİ"
+H_B_5 :  "MÜZİK İNDİRME KOMUTU"
+H_B_6 : "🚫ENGELEME LİSTESİ"
+H_B_7 :  " 📭REKLAM"
 H_B_8 : "🤖BOT KOMUTLARI"
 H_B_9:  "💥EKSTRA KOMUTLARI"
 H_B_10: "KAPAT"
