--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -226,7 +226,7 @@ queue_4 : "→ Sıraya Eklendi **#{0}\n→ **<u>Şarkı Adı:</u>** {1}\n→ **<
 queue_5 : "**Sırada Sadece Bir Parça Var**, **Lütfen Biraz Daha Parça Ekleyin.**"
 
 # All Streaming Lines
-stream_1 : "🎶 **<u>Şu An Çalıyor:</u>**\n\n→ **<u>Şarkı</u>:** {0}\n→ **<u>Süre</u>:** {2}\n→ **<u>İstekte Bulunan</u>:** {3}"
+stream_1 : "🎶 **Şu An Çalıyor:**\n\n→ **Şarkı:** {0}\n→ **Süre:** {2}\n→ **İstekte Bulunan:** {3}"
 stream_2 : "🎵 **<u>Dinleniyor:**</u>\n\n→ **<u>Parça</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep Eden</u>:** __{3}__"
 stream_3 : "🎼 **<u>Şarkı Detayları:**</u>\n\n→ **<u>Şarkı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>İstek Sahibi</u>:** __{3}__"
 stream_4 : "🎧 **<u>Şimdi Çalan:**</u>\n\n→ **<u>Şarkı Adı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep</u>:** __{3}__"
