--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -222,11 +222,11 @@ song_11 : "**Yükleme Başladı\n\nYükleme hızı yavaş olabilir. Lütfen bekl
 queue_1 : "→ **Lütfen Bekleyin..** **__Sıra Alınıyor...__** "
 queue_2 : "→ **Sırada Malesef Hiçbir Sey Yok.** "
 queue_3 : "→ <u>**Sıradaki Parçalar:**</u> [**Sıradaki Parçalara Buradan Bakabilirsiniz**]({0})"
-queue_4 : "→ Sıraya Eklendi **#{0}\n→ **Şarkı Adı:** {1}\n→ **Süre:** {2}\n→ **İstekte Bulunan:** {3}"
+queue_4 : "<blockquote>➠<b> Sıraya Eklendi **#{0} </blockquote>\n\n<blockquote>➠**Şarkı Adı:** {1}\n→ **Süre:** {2}\n→ **İstekte Bulunan:** {3}</blockquote>"
 queue_5 : "**Sırada Sadece Bir Parça Var**, **Lütfen Biraz Daha Parça Ekleyin.**"
 
 # All Streaming Lines
-stream_1 : "<blockquote>▣**Şu An Çalıyor:**</blockquote>\n<blockquote><b>❍\n→ **Şarkı:** {0}\n→ **Süre:** {2}\n→ **İstekte Bulunan:** {3}</blockquote>"
+stream_1 : "<blockquote>▣**Şu An Çalıyor:**</blockquote>\n<blockquote><b>❍\n❍ **Şarkı:** {0}\n❍ **Süre:** {2}\n❍ **İstekte Bulunan:** {3}</blockquote>"
 stream_2 : "🎵 **<u>Dinleniyor:**</u>\n\n→ **<u>Parça</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep Eden</u>:** __{3}__"
 stream_3 : "🎼 **<u>Şarkı Detayları:**</u>\n\n→ **<u>Şarkı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>İstek Sahibi</u>:** __{3}__"
 stream_4 : "🎧 **<u>Şimdi Çalan:**</u>\n\n→ **<u>Şarkı Adı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep</u>:** __{3}__"
