--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -281,7 +281,7 @@ P_B_4 : "🎵  𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗟𝗶𝘀𝘁𝗲𝗹𝗲𝗿𝗶
 #Playlist
 PL_B_1 : "🎧 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗹𝗶𝘀𝘁𝗲𝗹𝗲𝗿𝗶𝗺𝗶 𝗼𝘆𝗻𝗮𝘁"
 PL_B_2 : "💖 𝗟𝗶𝘀𝘁𝗲𝗺𝗲 𝗘𝗸𝗹𝗲"
-PL_B_3 : "⚙️ SES PANELİ"
+PL_B_3 : "<blockquote>▣ SES PANELİ<blockquote>▣"
 PL_B_4 : "📡 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗠𝗼𝗱𝘂"
 PL_B_5 : "🔄 𝗧𝘂‌𝗺 𝗟𝗶𝘀𝘁𝗲𝘆𝗶 𝗦𝗶𝗹"
 PL_B_6 : "↗️ 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗟𝗶𝘀𝘁𝗲𝘀𝗶𝗻𝗶 𝗦𝗶𝗹"
