--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -226,7 +226,7 @@ queue_4 : "<blockquote>➠<b> Sıraya Eklendi **#{0} </blockquote>\n\n<blockquot
 queue_5 : "**Sırada Sadece Bir Parça Var**, **Lütfen Biraz Daha Parça Ekleyin.**"
 
 # All Streaming Lines
-stream_1 : "<blockquote>▣**Şu An Çalıyor:**</blockquote>\n<blockquote><b>\n❍ **Şarkı:** {0}\n❍ **Süre:** {2}\n❍ **İstekte Bulunan:** {3}</blockquote>"
+stream_1 : "<blockquote>▣**Şu An Çalıyor:**</blockquote>\n<blockquote><b>\n❍ **Şarkı:** {0}</blockquote>\n<blockquote><b>\n❍  **Süre:** {2}\</blockquote>\n<blockquote><b>\n❍  **İstekte Bulunan:** {3}</blockquote>"
 stream_2 : "🎵 **<u>Dinleniyor:**</u>\n\n→ **<u>Parça</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep Eden</u>:** __{3}__"
 stream_3 : "🎼 **<u>Şarkı Detayları:**</u>\n\n→ **<u>Şarkı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>İstek Sahibi</u>:** __{3}__"
 stream_4 : "🎧 **<u>Şimdi Çalan:**</u>\n\n→ **<u>Şarkı Adı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep</u>:** __{3}__"
@@ -281,7 +281,7 @@ P_B_4 : "🎵  𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗟𝗶𝘀𝘁𝗲𝗹𝗲𝗿𝗶
 #Playlist
 PL_B_1 : "🎧 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗹𝗶𝘀𝘁𝗲𝗹𝗲𝗿𝗶𝗺𝗶 𝗼𝘆𝗻𝗮𝘁"
 PL_B_2 : "💖 𝗟𝗶𝘀𝘁𝗲𝗺𝗲 𝗘𝗸𝗹𝗲"
-PL_B_3 : "<blockquote>➠<b>🎛️SES PANELİ</blockquote>"
+PL_B_3 : "🎛️SES PANELİ"
 PL_B_4 : "📡 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗠𝗼𝗱𝘂"
 PL_B_5 : "🔄 𝗧𝘂‌𝗺 𝗟𝗶𝘀𝘁𝗲𝘆𝗶 𝗦𝗶𝗹"
 PL_B_6 : "↗️ 𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗟𝗶𝘀𝘁𝗲𝘀𝗶𝗻𝗶 𝗦𝗶𝗹"
