--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -226,7 +226,7 @@ queue_4 : "<blockquote>➠<b> Sıraya Eklendi **#{0} </blockquote>\n\n<blockquot
 queue_5 : "**Sırada Sadece Bir Parça Var**, **Lütfen Biraz Daha Parça Ekleyin.**"
 
 # All Streaming Lines
-stream_1 : "<blockquote>▣Şu An Çalıyor:<blockquote>\n\n<u>❍Şarkı:{0}</blockquote>\n\n<u>❍Süre:{2}</blockquote>\n\n<u>❍İstekte Bulunan:{3}<u></blockquote>"
+stream_1 : "<blockquote>▣Parça Bilgisi </blockquote>\n<blockquote>━━━━━━━━━━━━━━━━━━━━━━━━\n<b>❍ <u>Şarkı</u> :</b> <a href={0}>{1}</a>\n<b>❍ <u>Süre</u> :</b> {2} 𝖬𝗂𝗇𝗎𝗍𝖾𝗌\n<b>❍ <u>İstek Sahibi</u> :</b> {3}\n━━━━━━━━━━━━━━━━━━━━━━━━</blockquote>""
 stream_2 : "🎵 **<u>Dinleniyor:**</u>\n\n→ **<u>Parça</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep Eden</u>:** __{3}__"
 stream_3 : "🎼 **<u>Şarkı Detayları:**</u>\n\n→ **<u>Şarkı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>İstek Sahibi</u>:** __{3}__"
 stream_4 : "🎧 **<u>Şimdi Çalan:**</u>\n\n→ **<u>Şarkı Adı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep</u>:** __{3}__"
