--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -247,14 +247,14 @@ L_B_1 : "❄️ Şarkı Sözlerini Şimdi Kontrol Et"
 
 # Start
 
-S_B_1 : "📚𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿"
+S_B_1 : "📚Yardim komutları"
 S_B_2 : "🔧 𝗔𝘆𝗮𝗿𝗹𝗮𝗿"
 S_B_3 : "📨 𝗗𝗲𝘀𝘁𝗲𝗸"
 S_B_4 : "📨 𝗞𝗮𝗻𝗮𝗹"
 S_B_5 : "✚ 𝗕𝗲𝗻𝗶 𝗚𝗿𝘂𝗯𝘂𝗻𝗮 𝗘𝗸𝗹𝗲"
 S_B_6 : "💡 𝗞𝗮𝘆𝗻𝗮𝗸 𝗞𝗼𝗱𝘂"
 S_B_7 : "👮SAHİP"
-S_B_8 : "📚KOMUTLAR MENÜSÜ " 
+S_B_8 : "📚Yardim Komutlari " 
         
 #Help 
 H_B_1 :  " 💦YETKİLİ 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
