--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -265,9 +265,9 @@ H_B_5 :  "MÜZİK İNDİRME KOMUTU"
 H_B_6 : "🚫ENGELEME LİSTESİ"
 H_B_7 :  " 📭REKLAM"
 H_B_8 : "🤖BOT KOMUTLARI"
-H_B_9 :  "💥chat mode"
-H_B_10:  "Eğlence komutları"
-H_B_11: "KAPAT"
+H_B_9 :  "💥Eğlence komutları"
+H_B_10:  "KAPAT"
+
 
 
 
