--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -226,7 +226,7 @@ queue_4 : "<blockquote>➠<b> Sıraya Eklendi **#{0} </blockquote>\n\n<blockquot
 queue_5 : "**Sırada Sadece Bir Parça Var**, **Lütfen Biraz Daha Parça Ekleyin.**"
 
 # All Streaming Lines
-stream_1 : "<b><blockquote>➲ Parça Bilgisi |⏤‌‌●</blockquote></b>\n\n<b><blockquote>➠ <uŞarkı <u> :</b> <a href={0}>{1}</a>\n<b>➠ <u>Süre<u> :</b> {2} dakika\n<b>➠ <u>İstek Sahibi<u> </b> {3}<b></blockquote>\n<b><blockquote>➠ ϻᴧᴅє ʙʏ  ➛[ 📿]()</b></blockquote>"
+stream_1 : "<b><blockquote>➲ Parça Bilgisi |⏤‌‌●</blockquote></b>\n\n<b><blockquote>➠ <uŞarkı <u> :</b> <a href={0}></a>\n<b>➠ <u>Süre<u> :</b> {2} dakika\n<b>➠ <u>İstek Sahibi<u> </b> {3}<b></blockquote>\n<b><blockquote>➠ ϻᴧᴅє ʙʏ  ➛[ 📿]()</b></blockquote>"
 stream_2 : "🎵 **<u>Dinleniyor:**</u>\n\n→ **<u>Parça</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep Eden</u>:** __{3}__"
 stream_3 : "🎼 **<u>Şarkı Detayları:**</u>\n\n→ **<u>Şarkı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>İstek Sahibi</u>:** __{3}__"
 stream_4 : "🎧 **<u>Şimdi Çalan:**</u>\n\n→ **<u>Şarkı Adı</u>:** __{0}__\n→ **<u>Süre</u>:** __{2}__\n→ **<u>Talep</u>:** __{3}__"
@@ -257,15 +257,15 @@ S_B_7 : "👮SAHİP"
 S_B_8 : "📚Yardim Komutlari " 
         
 #Help 
-H_B_1 :  "ETİKET KOMUTU"
-H_B_2 :  " ⏭️DEĞİSTİME KOMUTU"
-H_B_3 :  "🥁𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
-H_B_4 : "📻OYNATMA LİSTESİ"
-H_B_5 :  "MÜZİK İNDİRME KOMUTU"
-H_B_6 : "🚫ENGELEME LİSTESİ"
-H_B_7 :  " 📭REKLAM"
-H_B_8 : "🤖BOT KOMUTLARI"
-H_B_9 :  "💥Eğlence komutları"
+H_B_1 :  "💥ETİKET KOMUTU"
+H_B_2 :  "🟡Eğlence komutları"
+H_B_3 :  "DEĞİSTİRME KOMUTU"
+H_B_4 :  "🥁𝗢𝘆𝗻𝗮𝘁𝗺𝗮 𝗞𝗼𝗺𝘂𝘁𝗹𝗮𝗿ı"
+H_B_5 : "📻OYNATMA LİSTESİ"
+H_B_6 :  "MÜZİK İNDİRME KOMUTU"
+H_B_7: "🚫ENGELEME LİSTESİ"
+H_B_8 :  "📭REKLAM"
+H_B_9 : " BOT KOMUTLARİ"
 H_B_10:  "KAPAT"
 
 
